# Jmpeg

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/studio/jmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  avinfo.cpp  native-lib.cpp
app/src/main/cpp/prebuild/ffmpeghead/libavutil/: ffversion.h
app/src/main/cpp/prebuild/ffmpeghead/libffmpeg/: config.h
app/src/main/java/com/studio/jmpeg/: MainActivity.kt
app/src/main/java/com/studio/jmpeg/avinfo/: JNIAvInfo.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/studio/jmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
